# zero_offset_calibration_ws

./: .gitignore  CASBOT02 二次开发文档-上半身.docx  README_calibration.md  build  hard_stop_calibration.py  install  mujoco_hard_stop_calibration.py  ros2_upper_body_hardware.py  test_hard_stop_calibration.py  zero_offsets.yaml  zero_offsets_1.yaml  zero_offsets_mujoco.yaml
casbot_band_urdf/urdf/: CASBOT02_ENCOS_7dof_shell_20251015_P1L_bass.urdf  CASBOT02_ENCOS_7dof_shell_20251015_P1L_guitar.urdf  CASBOT02_ENCOS_7dof_shell_20251015_P1L_keyboard.urdf
casbot_band_urdf/xml/: CASBOT02_ENCOS_7dof_shell_20251015_P1L.xml  CASBOT02_ENCOS_7dof_shell_20251015_P1L_bass.xml  CASBOT02_ENCOS_7dof_shell_20251015_P1L_guitar.xml  CASBOT02_ENCOS_7dof_shell_20251015_P1L_keyboard.xml
src/action_data/: BiaoDingA_casbot02-bass1_6R7R2R1R_hand01_upper_100hz_0.0.1.data  BiaoDingA_casbot02-guitar2_6R7R2R1R_hand01_whole_100hz_0.0.1.data  BiaoDingA_casbot02-keyboard1_6R7R2R1R_hand01_whole_100hz_0.0.1.data  BiaoDingB_casbot02-bass1_6R7R2R1R_hand01_upper_100hz_0.0.1.data  BiaoDingB_casbot02-guitar2_6R7R2R1R_hand01_whole_100hz_0.0.1.data  BiaoDingB_casbot02-keyboard1_6R7R2R1R_hand01_whole_100hz_0.0.1.data
src/crb_ros_msg/: CMakeLists.txt  package.xml
src/crb_ros_msg/msg/: UpperJointData.msg
src/zero_offset_calibration/: README_calibration.md  package.xml  setup.cfg  setup.py
src/zero_offset_calibration/config/: zero_offsets_mujoco_bass.yaml
src/zero_offset_calibration/launch/: ros2_upper_body_hardware.launch.py
src/zero_offset_calibration/test/: test_hard_stop_calibration.py
src/zero_offset_calibration/zero_offset_calibration/: __init__.py  _paths.py  action_player.py  hard_stop_calibration.py  mujoco_hard_stop_calibration.py  ros2_upper_body_hardware.py  web_ui.py  zero_offsets_mujoco.yaml
(+1 files in other folders)
